[tool.poetry]
name = "pubmed-paper-fetcher-kushal"
version = "0.1.0"
description = "A tool to fetch research papers with authors affiliated with pharmaceutical or biotech companies"
authors = ["Kushal Sathe <kushalsathe1@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "pubmed_paper_fetcher"}]

# Keywords for better discoverability on PyPI
keywords = ["PubMed", "Research Papers", "Affiliation Detection", "Pharmaceuticals", "Biotech"]

# Additional metadata classifiers (from https://pypi.org/classifiers/)
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "License :: OSI Approved :: MIT License"
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
isort = "^5.12.0"
mypy = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
get-papers-list = "pubmed_paper_fetcher.cli:main"

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

